--- a/index.html
+++ b/index.html
@@ -2,30 +2,169 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio - BTS SIO</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio BTS SIO SISR</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #121212;
+      color: #f8f9fa;
+    }
+    .hero {
+      padding: 100px 0;
+      text-align: center;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
+    }
+    .section {
+      padding: 60px 20px;
+    }
+    .card {
+      background-color: #1e1e1e;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Bienvenue sur mon Portfolio</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="a-propos.html">À propos</a></li>
-        <li><a href="competences.html">Compétences</a></li>
-        <li><a href="projets.html">Projets</a></li>
-        <li><a href="contact.html">Contact</a></li>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+  <div class="container">
+    <a class="navbar-brand" href="#">MonPortfolio</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#accueil">X</a></li>
+        <li class="nav-item"><a class="nav-link" href="#competences">Y</a></li>
+        <li class="nav-item"><a class="nav-link" href="#projets">Z</a></li>
       </ul>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <h2>Étudiant en BTS SIO</h2>
-      <p>Bienvenue sur mon portfolio professionnel. Passionné par le développement et les systèmes, je vous invite à découvrir mes projets, compétences et parcours.</p>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 - Ton Nom</p>
-  </footer>
+    </div>
+  </div>
+</nav>
+
+<!-- Accueil -->
+<section id="accueil" class="hero">
+  <div class="container">
+    <h1 class="display-4">Bienvenue sur mon Portfolio</h1>
+    <img src="ton-image.jpg" alt="Photo de profil" class="rounded-circle mt-4 mb-3" width="150">
+    <p class="lead">Un aperçu de mes compétences, projets et veille technologique dans le cadre du BTS SIO SISR.</p>
+  </div>
+</section>
+
+<!-- Compétences Techniques -->
+<section id="competences" class="section">
+  <div class="container">
+    <h2 class="mb-4">Compétences Techniques</h2>
+    <div class="row">
+      <div class="col-md-6 col-lg-3">
+        <h5>Systèmes</h5>
+        <ul>
+          <li>Windows Server</li>
+          <li>Linux Debian/Ubuntu</li>
+          <li>Gestion des utilisateurs, GPO</li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <h5>Réseaux</h5>
+        <ul>
+          <li>Configuration VLAN, DHCP, DNS</li>
+          <li>Outils : Wireshark, GNS3</li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <h5>Virtualisation & Conteneurisation</h5>
+        <ul>
+          <li>VMware, VirtualBox</li>
+          <li>Docker, Docker Compose</li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <h5>Automatisation</h5>
+        <ul>
+          <li>Scripts Bash / PowerShell</li>
+          <li>Déploiement avec Ansible</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Projets & Infrastructures -->
+<section id="projets" class="section bg-secondary">
+  <div class="container">
+    <h2 class="mb-5 text-white">Projets & Infrastructures</h2>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+      <!-- Carte Projet 1 -->
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Projet Active Directory</h5>
+            <p class="card-text">Mise en place d’un contrôleur de domaine avec gestion des utilisateurs, GPO, DNS/DHCP.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Carte Projet 2 -->
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Infrastructure Docker</h5>
+            <p class="card-text">Déploiement d’un cluster Docker avec plusieurs conteneurs : WordPress, MySQL, phpMyAdmin.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Carte Projet 3 -->
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Automatisation avec Ansible</h5>
+            <p class="card-text">Création de playbooks pour installer automatiquement Apache, PHP, MySQL sur des VM Linux.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Ajoute autant de projets que nécessaire -->
+    </div>
+  </div>
+</section>
+
+<!-- Veille Technologique -->
+<section id="veille" class="section">
+  <div class="container">
+    <h2 class="mb-4">Veille Technologique</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <h5>Infrastructure as Code (IaC)</h5>
+        <p>L'évolution vers l’automatisation complète des infrastructures via des outils comme Terraform, Ansible, etc.</p>
+      </div>
+      <div class="col-md-6">
+        <h5>Sécurité des conteneurs</h5>
+        <p>Focus sur la sécurisation des environnements Docker, l'usage d'outils comme Falco, et les bonnes pratiques DevSecOps.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Présentation Orale -->
+<section id="presentation" class="section bg-secondary text-white">
+  <div class="container">
+    <h2 class="mb-4">Présentation Orale</h2>
+    <p>Retrouvez ci-dessous mon support d’oral :</p>
+    <div class="ratio ratio-16x9">
+      <!-- Intégration d'un support type PDF ou vidéo YouTube -->
+      <iframe src="presentation.html" type="application/pdf"></iframe>
+      <!-- Ou par exemple YouTube : -->
+      <!-- <iframe src="https://www.youtube.com/embed/ID_DE_LA_VIDEO" title="Présentation orale" allowfullscreen></iframe> -->
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-dark text-center text-white py-4">
+  <p class="mb-0">© 2025 MonPortfolio - BTS SIO SISR</p>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
